Añadimos una imagen en homecontroller y añadimos la carpeta imagenes en root con una imagen

--- a/Oniria/Views/Home/Index.cshtml
+++ b/Oniria/Views/Home/Index.cshtml
@@ -5,4 +5,6 @@
 <div class="text-center">
     <h1 class="display-4">Mondongo</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <img style="width: 100px; height:100px;" src="~/imagenes/cat.png" />
+    <h1>larry</h1>
 </div>
