--- a/Oniria/Views/Home/Index.cshtml
+++ b/Oniria/Views/Home/Index.cshtml
@@ -50,3 +50,105 @@
         }
     </div>
 </div>
+<button id="userSession">Get User Session</button>
+<button id="loginUser">Login User</button>
+<button id="createUser">Create User</button>
+<button id="updateUser">Update User</button>
+<button id="confirmEmailUser">Confirm Email User</button>
+<h1 id="result">####</h1>
+@section Scripts {
+    <script>
+        $(document).ready(function() {
+            // Obtener sesión al hacer clic
+            $("#userSession").click(function() {
+                $.ajax({
+                    url: '@Url.Action("GetUserSession")',
+                    type: 'GET',
+                    success: function(response) {
+                        $("#result").html(JSON.stringify(response.data));
+                    },
+                    error: function(xhr) {
+                        $("#result").html("Error: " + xhr.statusText);
+                    }
+                });
+            });
+
+            // Login al hacer clic
+            $("#loginUser").click(function() {
+                $.ajax({
+                    url: '@Url.Action("Login")',
+                    type: 'POST',
+                    contentType: 'application/json',
+                    success: function(response) {
+                        if (response.OK) {
+                            $("#result").html("<p>Se Logeo nitido</p>");
+                        }
+                        else {
+                            $("#result").html(response.messages);
+                        }
+                    },
+                    error: function(xhr) {
+                        $("#result").html("Login failed: " + xhr.statusText);
+                    }
+                });
+            });
+
+            $("#createUser").click(function() {
+                $.ajax({
+                    url: '@Url.Action("CreateUser")',
+                    type: 'POST',
+                    contentType: 'application/json',
+                    success: function(response) {
+                        if (response.OK) {
+                            $("#result").html("<p>Se creo nitido</p>");
+                        }
+                        else {
+                            $("#result").html(response.messages);
+                        }
+                    },
+                    error: function(xhr) {
+                        $("#result").html("Create failed: " + xhr.statusText);
+                    }
+                });
+            });
+
+            $("#updateUser").click(function() {
+                $.ajax({
+                    url: '@Url.Action("UpdateUser")',
+                    type: 'POST',
+                    contentType: 'application/json',
+                    success: function(response) {
+                        if (response.OK) {
+                            $("#result").html("<p>Se actualizo Nitido</p>");
+                        }
+                        else {
+                            $("#result").html(response.messages);
+                        }
+                    },
+                    error: function(xhr) {
+                        $("#result").html("Update failed: " + xhr.statusText);
+                    }
+                });
+            });
+
+            $("#confirmEmailUser").click(function() {
+                $.ajax({
+                    url: '@Url.Action("ConfirmEmail")',
+                    type: 'POST',
+                    contentType: 'application/json',
+                    success: function(response) {
+                        if (response.OK) {
+                            $("#result").html("<p>Se Confirmo Nitido</p>");
+                        }
+                        else {
+                            $("#result").html(response.messages);
+                        }
+                    },
+                    error: function(xhr) {
+                        $("#result").html("Confirm Email failed: " + xhr.statusText);
+                    }
+                });
+            });
+        });
+    </script>
+}
