Agregar redireccionamiento automatico depende el rol y la session iniciada

--- a/Oniria/Views/Shared/HttpResponses/_401.cshtml
+++ b/Oniria/Views/Shared/HttpResponses/_401.cshtml
@@ -102,5 +102,5 @@
     </div>
     <div class="error-code">401</div>
     <div class="error-message">Unauthorized Response</div>
-    <a asp-controller="Home" asp-action="Index" class="btn link-secondary mt-1">Go Home</a>
+    <a asp-controller="Home" asp-action="HomeRedirection" class="btn link-secondary mt-1">Go Home</a>
 </div>
