--- a/Oniria/Views/Shared/HttpResponses/_403.cshtml
+++ b/Oniria/Views/Shared/HttpResponses/_403.cshtml
@@ -2,4 +2,4 @@
     Layout = "~/Views/Shared/Layouts/_OnlyBodyLayout.cshtml";
 }
 <h1>403</h1>
-<a asp-controller="Home" asp-action="Index">back</a>
+<a asp-controller="Home" asp-action="HomeRedirection">back</a>
