--- a/Oniria/Views/Shared/Layouts/_OnlyBodyLayout.cshtml
+++ b/Oniria/Views/Shared/Layouts/_OnlyBodyLayout.cshtml
@@ -1,23 +1,18 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Oniria</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/lib/bootstrap-icons/font/bootstrap-icons.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/fontImports.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/fontClasses.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Oniria.styles.css" asp-append-version="true" />
+    @* STYLES AND CONFIGS *@
+    <partial name="Layouts/Base/_LayoutHeadConfigs" />
+    <partial name="Layouts/Base/_LayoutStyles" />
 </head>
 <body>
+    @* MAIN CONTENT *@
     <main role="main">
         @RenderBody()
     </main>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+
+    @* SCRIPTS *@
+    <partial name="Layouts/Base/_LayoutScripts" />
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
