Agregar todos los seeder para las entidades

--- a/Oniria/Views/Shared/Layouts/_Layout.cshtml
+++ b/Oniria/Views/Shared/Layouts/_Layout.cshtml
@@ -16,7 +16,7 @@
         <div class="flex-grow-1 d-flex overflow-hidden">
 
             <!-- SIDE BAR -->
-            @if ((await LoggedUserAsync()) != null)
+            @if ((await GetLoggedUserAsync()) != null)
             {
                 <partial name="Layouts/SideBars/_SideMenu" />
             }
