--- a/Oniria/Views/Shared/Layouts/TopBars/Options/_TopMenuLoggedUser.cshtml
+++ b/Oniria/Views/Shared/Layouts/TopBars/Options/_TopMenuLoggedUser.cshtml
@@ -1,4 +1,19 @@
-﻿<style>
+﻿@inherits Oniria.Extensions.BaseRazor
+@{
+    // Get Name to Display
+    var nameToDisplay = "N/A";
+    var tryPatient = await GetUserPatientInfoAsync();
+    var tryEmployee = await GetUserEmployeeInfoAsync();
+
+    if (tryPatient != null) {
+        nameToDisplay = $"{tryPatient.Name} {tryPatient.LastName}";
+    }
+
+    if (tryEmployee != null) {
+        nameToDisplay = $"{tryEmployee.Name} {tryEmployee.LastName}";
+    }
+}
+<style>
     .avatar {
         cursor: pointer;
     }
@@ -52,7 +67,7 @@
     <div class="dropdown">
         <a class="avatar d-flex align-items-center text-decoration-none dropdown-toggle gap-2 text-secondary" id="userDropdown" data-bs-toggle="dropdown" aria-expanded="false">
             <img src="~/images/icons/notLoggedUserAvatar.png" alt="avatar" width="32" height="32" class="rounded-circle avatar">
-            <span>Loremipsum</span>
+            <span>@nameToDisplay</span>
         </a>
         <ul class="dropdown-menu shadow-sm p-0">
             <li>
