--- a/Oniria/Views/Shared/Layouts/TopBars/_TopMenu.cshtml
+++ b/Oniria/Views/Shared/Layouts/TopBars/_TopMenu.cshtml
@@ -9,7 +9,7 @@
             </button>
             <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                 @* OPTIONS *@
-                @if ((await LoggedUserAsync()) != null)
+                @if ((await GetLoggedUserAsync()) != null)
                 {
                     <partial name="Layouts/TopBars/Options/_TopMenuLoggedUser" />
                 }
