Agregar atributo para clases y funciones de redireccionamiento al home segun session, pantalla home, y algunos cambiesitos

--- a/Oniria/Views/Shared/Layouts/TopBars/Options/_TopMenuLoggedUser.cshtml
+++ b/Oniria/Views/Shared/Layouts/TopBars/Options/_TopMenuLoggedUser.cshtml
@@ -77,7 +77,7 @@
                 </a>
             </li>
             <li>
-                <a class="dropdown-item" asp-action="" asp-controller="">
+                <a class="dropdown-item" asp-action="SignOut" asp-controller="Auth">
                     <i class="bi bi-box-arrow-left"></i>
                     Sing out
                 </a>
