--- a/Oniria/Views/Home/Index.cshtml
+++ b/Oniria/Views/Home/Index.cshtml
@@ -368,7 +368,7 @@
         </div>
         <div class="about-image">
             <!-- Cloud image placeholder -->
-            <img src="~/images/cloudBadge.png" alt="Dream cloud" class="cloud-image">
+            <img src="~/images/views/home/cloudBadge.png" alt="Dream cloud" class="cloud-image">
         </div>
     </div>
 </section>
@@ -456,7 +456,7 @@
             </div>
         </div>
         <div class="feature-image">
-            <img src="~/images/home-service1.jpg" alt="Person analyzing dreams on computer">
+            <img src="~/images/views/home/home-service1.jpg" alt="Person analyzing dreams on computer">
         </div>
     </div>
 
@@ -471,7 +471,7 @@
             </div>
         </div>
         <div class="feature-image">
-            <img src="~/images/home-service2.jpg" style="height: 362px;" alt="Therapist with client session">
+            <img src="~/images/views/home/home-service2.jpg" style="height: 362px;" alt="Therapist with client session">
         </div>
     </div>
 
@@ -486,7 +486,7 @@
             </div>
         </div>
         <div class="feature-image">
-            <img src="~/images/home-service3.jpg" alt="Statistics dashboard with charts">
+            <img src="~/images/views/home/home-service3.jpg" alt="Statistics dashboard with charts">
         </div>
     </div>
 
@@ -501,7 +501,7 @@
             </div>
         </div>
         <div class="feature-image">
-            <img src="~/images/home-service4.jpg" alt="Therapist with client consultation">
+            <img src="~/images/views/home/home-service4.jpg" alt="Therapist with client consultation">
         </div>
     </div>
 </section>
