--- a/Oniria/Views/Shared/Confirmations/_EmailConfirmation.cshtml
+++ b/Oniria/Views/Shared/Confirmations/_EmailConfirmation.cshtml
@@ -69,7 +69,7 @@
 </style>
 <div class="main-container">
     <!-- Imagen de fondo -->
-    <img src="~/images/backgrounds/pot.jpg" alt="office background" class="background-image">
+    <img src="~/images/random-backgrounds/pot.jpg" alt="office background" class="background-image">
 
     <div class="almost-there-container">
         <div class="icon-container">
