--- a/Oniria/Views/Shared/Layouts/TopBars/Options/_TopMenuNotLoggedUser.cshtml
+++ b/Oniria/Views/Shared/Layouts/TopBars/Options/_TopMenuNotLoggedUser.cshtml
@@ -22,8 +22,8 @@
 <!-- Usuario dropdown + botones -->
 <div class="d-flex align-items-center justify-content-end gap-3 ms-auto">
     <!-- Botones -->
-    <a class="sing-in btn btn-sm text-primary px-3" asp-controller="Auth" asp-action="RegisterType">Sign in</a>
-    <a class="sing-up btn btn-sm btn-primary px-3" asp-controller="Auth" asp-action="Login">Sign up</a>
+    <a class="sing-in btn btn-sm text-primary px-3" asp-controller="Auth" asp-action="Login">Sign in</a>
+    <a class="sing-up btn btn-sm btn-primary px-3" asp-controller="Auth" asp-action="RegisterType">Sign up</a>
 
     <!-- Dropdown con avatar -->
     <a asp-controller="Auth" asp-action="Login" class="d-flex align-items-center text-decoration-none ps-2">
