--- a/Oniria/wwwroot/css/site.css
+++ b/Oniria/wwwroot/css/site.css
@@ -19,3 +19,10 @@ html {
 *:hover::-webkit-scrollbar-thumb {
     background-color: rgba(0, 0, 0, 0.4);
 }
+
+.validation-summary-valid ul,
+.validation-summary-errors ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
