--- a/Oniria/Views/Auth/Login.cshtml
+++ b/Oniria/Views/Auth/Login.cshtml
@@ -97,13 +97,13 @@
                 <div asp-validation-summary="ModelOnly" class="general-error text-danger px-4 py-2 rounded-3"></div>
             </div>
 
-            <div class="form-group">
+            <div class="form-group poppins-light">
                 <label class="form-label" for="identifier">Email or Username</label>
                 <input asp-for="Identifier" class="form-control" type="text" id="identifier" placeholder="Enter Identifier">
                 <span asp-validation-for="Identifier" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
+            <div class="form-group poppins-light">
                 <label class="form-label" for="password">Password</label>
                 <input asp-for="Password" class="form-control" type="password" id="password" placeholder="Enter Password">
                 <span asp-validation-for="Password" class="text-danger"></span>
