Ya se registra pacientes con todos sus datos

--- a/Oniria/Views/Shared/Confirmations/_EmailConfirmation.cshtml
+++ b/Oniria/Views/Shared/Confirmations/_EmailConfirmation.cshtml
@@ -81,6 +81,6 @@
         <p class="almost-there-subtitle">Now you can login to access to the page</p>
 
         <p class="didnt-receive-text"></p>
-        <a asp-controller="Home" asp-action="Index" class="btn btn-outline-primary px-4">Log In</a>
+        <a asp-controller="Auth" asp-action="Login" class="btn btn-outline-primary px-4">Log In</a>
     </div>
 </div>
