--- a/Oniria/Views/Auth/Login.cshtml
+++ b/Oniria/Views/Auth/Login.cshtml
@@ -81,11 +81,6 @@
             color: #3366ff;
             text-decoration: none;
         }
-
-    .general-error{
-        background: rgba(255, 0, 0, 0.1);
-        user-select: none;
-    }
 </style>
 <div class="login-container">
     <div class="left-container">
@@ -94,7 +89,7 @@
             <p class="new-to-product">New to Our Product? <a asp-controller="Auth" asp-action="RegisterType">Create an Account</a></p>
 
             <div class="d-flex justify-content-center mb-3">
-                <div asp-validation-summary="ModelOnly" class="general-error text-danger px-4 py-2 rounded-3"></div>
+                <div asp-validation-summary="ModelOnly" class="general-error"></div>
             </div>
 
             <div class="form-group poppins-light">
