--- a/Oniria/Views/Auth/RestorePassword.cshtml
+++ b/Oniria/Views/Auth/RestorePassword.cshtml
@@ -54,11 +54,6 @@
     .email-input-group {
         margin-top: 20px;
     }
-
-    .general-error {
-        background: rgba(255, 0, 0, 0.1);
-        user-select: none;
-    }
 </style>
 
 <div class="main-container">
@@ -69,7 +64,7 @@
         <p class="restore-password-subtitle">Enter your email address and we'll send you a new password.</p>
 
         <div class="d-flex justify-content-center mb-3">
-            <div asp-validation-summary="ModelOnly" class="general-error text-danger px-4 py-2 rounded-3"></div>
+            <div asp-validation-summary="ModelOnly" class="general-error"></div>
         </div>
 
         <form asp-action="RestorePassword" method="post">
