--- a/Oniria/Views/Shared/Confirmations/_ResetPasswordConfirmation.cshtml
+++ b/Oniria/Views/Shared/Confirmations/_ResetPasswordConfirmation.cshtml
@@ -93,7 +93,7 @@
             </div>
         </div>
 
-        <a asp-controller="Home" asp-action="Index" class="btn btn-primary px-4 mt-3">Log In</a>
+        <a asp-controller="Auth" asp-action="Login" class="btn btn-primary px-4 mt-3">Log In</a>
     </div>
 </div>
 
